--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,10 +11,11 @@
       - vector-{{ vector_version }}-1.x86_64.rpm
     disable_gpg_check: true
 - name: Configure vector
-  ansible.builtin.template:
-    src: vector.toml.j2
+  ansible.builtin.copy:
+    src: "{{ vectorconfig }}"
     dest: "{{ vector_config_dir }}/vector.toml"
     mode: "0644"
+    remote_src: false
 - name: Configure vector service
   ansible.builtin.template:
     src: vector.service.j2
