--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,4 +2,4 @@
 # defaults file for vector
 vector_version: "0.32.1"
 vector_config_dir: /etc/vector
-vectorconfig: files/vector.toml
+vector_config: 
